crates/sui-prover/tests/snapshots/quantifiers/complex_usage.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 260
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/complex_usage.ok.move:17:19
   │
17 │     invariant!(|| ensures(i <= u.length() && !exists!<u64>(|j| invariant_expression(*j, i, u[*j], v[*j]))));
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/complex_usage.ok.move:28: vec_leq_spec
   =     enter loop, variable(s) i#1#0 havocked and reassigned
   =     at tests/../../../packages/prover/sources/prover.move:11

error: prover::asserts conditions are not complete
   ┌─ tests/inputs/quantifiers/complex_usage.ok.move:28:1
   │  
28 │ ╭ fun vec_leq_spec(u: vector<u8>, v: vector<u8>): bool {
29 │ │     vec_leq(u, v)
30 │ │ }
   │ ╰─^
   │  
   =     at tests/inputs/quantifiers/complex_usage.ok.move:28: vec_leq_spec
